--- a/src/sass/_mobile-menu.scss
+++ b/src/sass/_mobile-menu.scss
@@ -8,13 +8,18 @@
     transform: translateX(-104%);
     padding-top: var(--headerh);
     width: 100%;
-    height: 100vh;
+    height: calc(var(--vh, 1vh) * 100);
     color: $white-color;
     background: $dark-green-color;
     transition: all 0.3s ease-in-out;
     &--active {
         transform: translateX(0);
     }
+
+    @media screen and (min-width: 1024px) {
+        display: none;
+    }
+
     &__wrapper {
         overflow-x: hidden;
         overflow-y: auto;
@@ -24,13 +29,18 @@
         border-top: 1px solid $green-line-color;
         &.is--open {
             .mobile-menu {
-                &__trigger {
+                &__dropdown {
                     &::after {
                         transform: translateY(-50%) rotate(90deg);
                     }
                 }
             }
         }
+    }
+    &__inner {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
     }
     &__trigger {
         display: flex;
@@ -41,39 +51,53 @@
         font-size: 20px;
         font-weight: 600;
         color: $white-color;
-        &--dropdown {
-            position: relative;
-            &::before {
-                content: '';
-                position: absolute;
-                top: 50%;
-                right: 26px;
-                transform: translateY(-50%);
-                display: block;
-                width: 20px;
-                height: 2px;
-                background: $white-color;
-                border-radius: 4px;
-            }
-            &::after {
-                content: '';
-                position: absolute;
-                top: 50%;
-                right: 35px;
-                transform: translateY(-50%);
-                display: block;
-                width: 2px;
-                height: 20px;
-                background: $white-color;
-                border-radius: 4px;
-                transition: all 0.2s ease-in-out;
-            }
+        &:active {
+            color: $white-color;
         }
         
         @media screen and (hover: hover) {
             &:hover {
                 color: $white-color;
             }
+        }
+    }
+    &__dropdown {
+        position: relative;
+        display: block;
+        margin-left: 20px;
+        min-width: 62px;
+        width: 62px;
+        height: 62px;
+        background: transparent;
+        border: none;
+        border-radius: 0;
+        &::before {
+            content: '';
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            display: block;
+            width: 20px;
+            height: 2px;
+            background: $white-color;
+            border-radius: 4px;
+        }
+        &::after {
+            content: '';
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            display: block;
+            width: 2px;
+            height: 20px;
+            background: $white-color;
+            border-radius: 4px;
+            transition: all 0.2s ease-in-out;
+        }
+        &:focus {
+            outline: none;
         }
     }
     &__icon {
