--- a/src/sass/_lk.scss
+++ b/src/sass/_lk.scss
@@ -561,7 +561,7 @@
         position: relative;
         z-index: 1;
         display: block;
-        margin: 40px 0 0 20px;
+        margin: 40px 0 40px 20px;
         padding-right: 14px;
         width: fit-content;
         font-size: 40px;
