--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -5472,8 +5472,8 @@
     }
     
     &__list {
-        overflow: hidden;
         margin-right: 20px;
+        max-height: 639px;
         max-width: 286px;
         min-width: 286px;
         width: 100%;
@@ -5605,6 +5605,7 @@
         }
     }
     &__btn {
+        position: relative;
         display: flex;
         align-items: center;
         justify-content: center;
@@ -5628,6 +5629,14 @@
                 color: $white-color;
             }
         }
+        &--liked {
+            color: $white-color;
+            background: $red-color;
+            border: 2px solid $red-color;
+            svg {
+                color: $white-color;
+            }
+        }
 
         @media screen and (hover: hover) {
             &:hover {
@@ -5638,6 +5647,28 @@
                     color: $white-color;
                 }
             }
+        }
+    }
+    &__message {
+        position: absolute;
+        top: -2px;
+        left: 50%;
+        z-index: 10;
+        transform: translate(-50%, -100%);
+        visibility: hidden;
+        padding: 4px;
+        font-size: 14px;
+        font-weight: normal;
+        text-align: center;
+        opacity: 0;
+        color: $dark-green-color;
+        background: $white-color;
+        border-radius: 8px;
+        pointer-events: none;
+        transition: all 0.3s ease-in-out;
+        &--active {
+            visibility: visible;
+            opacity: 1;
         }
     }
     &__icon {
