--- a/src/sass/_components.scss
+++ b/src/sass/_components.scss
@@ -1146,3 +1146,46 @@
         }
     }
 }
+
+// photos
+.c-photos {
+    display: flex;
+    flex-wrap: wrap;
+    &__item {
+        height: 161px;
+
+        @media screen and (min-width: 1024px) {
+            width: 32%;
+            &:nth-child(3n),
+            &:nth-child(3n - 1) {
+                margin-left: 2%;
+            }
+            &:nth-child(n + 4) {
+                margin-top: 20px;
+            }
+        }
+        @media screen and (max-width: 1023px) {
+            width: 48%;
+            height: 101px;
+            &:nth-child(2n) {
+                margin-left: 4%;
+            }
+            &:nth-child(n + 3) {
+                margin-top: 20px;
+            }
+        }
+    }
+    &__img {
+        display: block;
+        overflow: hidden;
+        width: 100%;
+        height: 100%;
+        border-radius: 12px;
+        img {
+            display: block;
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
+    }
+}
