--- a/src/sass/vendor.scss
+++ b/src/sass/vendor.scss
@@ -24,3 +24,4 @@
 @import 'node_modules/flatpickr/dist/flatpickr.min'; // flatpickr
 @import 'node_modules/quill/dist/quill.bubble'; // quill
 @import 'node_modules/quill/dist/quill.snow'; // quill
+@import 'node_modules/@fancyapps/ui/dist/fancybox'; // fancybox
