--- a/src/sass/_components.scss
+++ b/src/sass/_components.scss
@@ -1018,6 +1018,11 @@
     color: $white-color;
     background: $dark-green-color;
     border-radius: 12px;
+
+    @media screen and (max-width: 767px) {
+        padding: 40px 20px;
+    }
+
     &__title {
         font-size: 16px;
         font-weight: bold;
@@ -1035,6 +1040,10 @@
         font-size: 40px;
         font-weight: bold;
         line-height: 1.2;
+
+        @media screen and (max-width: 374px) {
+            font-size: 32px;
+        }
     }
     &__value + &__value {
         &::before {
