--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -295,6 +295,7 @@
 }
 
 .nav {
+    padding-bottom: 32px;
     margin-right: -20px;
 
     @media screen and (min-width: 1024px) and (max-width: 1199px) {
@@ -338,7 +339,7 @@
         position: relative;
         display: flex;
         align-items: center;
-        padding: 32px 20px;
+        padding: 32px 20px 0;
         font-size: 16px;
         font-weight: 600;
         color: $dark-green-color;
@@ -346,7 +347,7 @@
             content: '';
             position: absolute;
             right: 0;
-            bottom: -1px;
+            bottom: -33px;
             left: 0;
             display: block;
             width: 100%;
@@ -375,7 +376,7 @@
             }
         }
         @media screen and (min-width: 1024px) and (max-width: 1199px) {
-            padding: 32px 10px;
+            padding: 32px 10px 0;
             font-size: 14px;
         }
     }
@@ -505,6 +506,15 @@
     padding: 48px 0;
     width: 100%;
     background: $dark-green-color;
+    &::before {
+        content: '';
+        position: absolute;
+        top: -32px;
+        right: 0;
+        left: 0;
+        width: 100%;
+        height: 32px;
+    }
 
     @media screen and (hover: hover) {
         &:hover {
