--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -3796,6 +3796,10 @@
     &__left {
         max-width: 797px;
         width: 100%;
+        iframe {
+            max-width: 100%;
+            width: 100%!important;
+        }
 
         @media screen and (max-width: 1023px) {
             margin-top: 40px;
@@ -5598,6 +5602,12 @@
         width: 100%;
         &--active {
             display: block;
+        }
+    }
+    &__block {
+        iframe {
+            max-width: 100%;
+            width: 100%!important;
         }
     }
     &__block + &__block {
@@ -7553,6 +7563,12 @@
             background-size: 1100px;
         }
         @media screen and (max-width: 767px) {
+            bottom: 50%;
+            right: auto;
+            left: 50%;
+            transform: translate(-50%, 50%);
+            width: 800px;
+            height: 800px;
             background-size: 800px;
         }
     }
